# messenger-client-cpp

./: .gitignore  CMakeLists.txt  README.md  builder.py
.github/workflows/: release.yml
include/: crypto.h  http_messenger_client.h  message.h  messenger_client.h  remote_port_forwarder.h  websocket_messenger_client.h
src/: crypto.cpp  dllmain.cpp  http_messenger_client.cpp  main.cpp  message.cpp  messenger_client.cpp  remote_port_forwarder.cpp  websocket_messenger_client.cpp
